Fixed whitespace description header and added a demo button to login

--- a/frontend/src/components/LoginForm/LoginForm.module.css
+++ b/frontend/src/components/LoginForm/LoginForm.module.css
@@ -34,6 +34,10 @@
   margin-top: 1em;
 }
 
+.center {
+  margin: 0 auto;
+}
+
 .error {
   color: red;
 }
